--- a/package.json
+++ b/package.json
@@ -12,9 +12,11 @@
   },
   "dependencies": {
     "bulma": "^0.7.1",
+    "firebase": "^5.3.1",
     "node-sass": "^4.9.2",
     "sass-loader": "^7.1.0",
-    "vue": "^2.5.2"
+    "vue": "^2.5.2",
+    "vuefire": "^1.4.5"
   },
   "devDependencies": {
     "autoprefixer": "^7.1.2",
