--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
     "node-sass": "^4.9.2",
     "sass-loader": "^7.1.0",
     "vue": "^2.5.2",
-    "vuefire": "^1.4.5"
+    "vue-router": "^3.0.1",
+    "vuefire": "^1.4.5",
+    "vuex": "^3.0.1"
   },
   "devDependencies": {
     "autoprefixer": "^7.1.2",
