--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
 		"node-sass": "^4.9.3",
 		"vue": "^2.5.17",
 		"vue-hot-reload-api": "^2.3.0",
+		"vue-router": "^3.0.1",
 		"vuefire": "^1.4.5"
 	},
 	"devDependencies": {
