--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
 	"dependencies": {
 		"babel-preset-env": "^1.7.0",
 		"bulma": "^0.7.1",
+		"bulma-checkradio": "^2.1.0",
 		"firebase": "^5.5.0",
 		"node-sass": "^4.9.3",
 		"vue": "^2.5.17",
