--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
 		"firebase": "^5.5.0",
 		"node-sass": "^4.9.3",
 		"vue": "^2.5.17",
+		"vue-fuse": "^2.0.2",
 		"vue-hot-reload-api": "^2.3.0",
 		"vue-router": "^3.0.1",
 		"vuefire": "^1.4.5"
