--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
 	"scripts": {
 		"dev": "parcel index.html",
 		"build": "parcel build index.html --public-url ./",
+		"shortbuild": "parcel build index.html --no-source-maps --no-minify --public-url ./",
 		"test": "echo \"Error: no test specified\" && exit 1"
 	},
 	"keywords": [],
