--- a/package.json
+++ b/package.json
@@ -2,9 +2,8 @@
 	"name": "dndtest",
 	"version": "1.0.0",
 	"description": "",
-	"main": "index.js",
 	"scripts": {
-		"dev": "parcel index.html",
+		"dev": "parcel index.html --public-url ./",
 		"build": "parcel build index.html --public-url ./",
 		"shortbuild": "parcel build index.html --no-source-maps --no-minify --public-url ./",
 		"test": "echo \"Error: no test specified\" && exit 1"
@@ -13,22 +12,27 @@
 	"author": "",
 	"license": "ISC",
 	"dependencies": {
-		"babel-preset-env": "^1.7.0",
-		"bulma": "^0.7.1",
-		"bulma-checkradio": "^2.1.0",
-		"firebase": "^5.5.0",
-		"node-sass": "^4.9.3",
-		"vue": "^2.5.17",
-		"vue-fuse": "^2.0.2",
-		"vue-hot-reload-api": "^2.3.0",
-		"vue-router": "^3.0.1",
-		"vuefire": "^1.4.5"
+		"bulma": "^0.9.4",
+		"bulma-checkradio": "^2.1.3",
+		"firebase": "^9.8.2",
+		"node-sass": "^7.0.1",
+		"vue": "^3.2.36",
+		"vue-fuse": "^4.1.1",
+		"vue-hot-reload-api": "^2.3.4",
+		"vue-router": "^4.0.15",
+		"vuefire": "^2.2.5"
 	},
 	"devDependencies": {
-		"@vue/component-compiler-utils": "^2.2.0",
-		"parcel-bundler": "^1.9.7",
-		"postcss-import": "^12.0.0",
-		"postcss-url": "^8.0.0",
-		"vue-template-compiler": "^2.5.17"
+		"@babel/core": "^7.18.2",
+		"@parcel/transformer-sass": "^2.6.0",
+		"@parcel/transformer-vue": "^2.6.0",
+		"autoprefixer": "^10.4.7",
+		"babel-core": "^6.26.3",
+		"parcel": "^2.6.0",
+		"postcss": "^8.4.14",
+		"postcss-import": "^14.1.0",
+		"postcss-url": "^10.1.3",
+		"process": "^0.11.10",
+		"vue-template-compiler": "^2.6.14"
 	}
 }
