--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
 	"version": "1.0.0",
 	"description": "",
 	"scripts": {
-		"dev": "parcel index.html --public-url ./",
+		"dev": "parcel index.html",
 		"build": "parcel build index.html --public-url ./",
 		"shortbuild": "parcel build index.html --no-source-maps --no-minify --public-url ./",
 		"test": "echo \"Error: no test specified\" && exit 1"
@@ -19,8 +19,7 @@
 		"vue": "^3.2.36",
 		"vue-fuse": "^4.1.1",
 		"vue-hot-reload-api": "^2.3.4",
-		"vue-router": "^4.0.15",
-		"vuefire": "^2.2.5"
+		"vue-router": "^4.0.15"
 	},
 	"devDependencies": {
 		"@babel/core": "^7.18.2",
@@ -32,7 +31,6 @@
 		"postcss": "^8.4.14",
 		"postcss-import": "^14.1.0",
 		"postcss-url": "^10.1.3",
-		"process": "^0.11.10",
-		"vue-template-compiler": "^2.6.14"
+		"process": "^0.11.10"
 	}
 }
